# automation

./: .gitignore  README.md  aca_2000.py  app.py  my_email_script.py  pyproject.toml  requirements.txt  test_kakao.py  utils.py
.github/workflows/: build-desktop.yml
desktop_app/: build.sh  config.json  main.py
