[project]
name = "noti-auto"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dearpygui>=2.2",
    "dotenv>=0.9.9",
    "imap-tools>=1.11.0",
    "pykakao>=0.0.7",
    "ruff>=0.14.11",
    "selenium>=4.39.0",
    "selenium-stealth>=1.0.6",
    "streamlit>=1.52.2",
    "webdriver-manager>=4.0.2",
]
